# risiko-online

./: .gitignore  References.txt  Specs.txt  Traccia.htm  project-report.docx  template-progetto.docx  ~$oject-report.docx
Airport Example Project/final-example-airport/: .env  airport  cmake_install.cmake
doc/: Draft.txt  ER-Diagram.mwb  ER-Diagram.mwb.bak  Schema Concettuale (Stripped).drawio  Schema Concettuale.drawio
doc/ID BASED/: Attack Enemy.txt  Attack Enemy.txt.bak  Roll Dice for Both Players.sql  SQL Script.sql  Schema Concettuale - ModForScreenshot.drawio  Schema Concettuale - Partitioned.drawio  Schema Concettuale [Optimized].drawio  Schema Concettuale [Restructured-V-LookupTable].drawio  Schema Concettuale [Restructured].drawio  Schema Concettuale.drawio  Schema Relazionale.drawio  [ID-BASED] ER-Diagram.mwb  [ID-BASED] ER-Diagram.mwb.bak  [Testing] Attack Testing Script.sql
doc/ID BASED/Final Diagrams/: Schema Concettuale - Parts.drawio  Schema Concettuale [Restructured].drawio  Schema Concettuale.drawio
doc/ID BASED/SQL Scripts/: Create-Event-Start_Match_Watcher.sql  Create-Event-Turn_End_Watcher.sql  Create-Event-Turn_End_Watcher_V2.sql  Setup-Nations.sql  [Backup] Pre-cleanup Structure.sql  [Backup] Schedule Turns V3.sql  [Experimental] Trying mechanisms for the Scheduled Turns.sql  [Experimental] Turns Watcher with Temporary Tables.sql  [Testing] Assign 6 Nations.sql  [Testing] Attack Testing Script.sql  [Testing] Create 10 turns.sql  [Testing] Create Room and Auto Join.sql  [Testing] Create Room,Match,Turns.sql  [Testing] View player matches history.sql  [Testing] View player matches history.sql.bak
doc/ID BASED/Static Tables Data/: Indexes.csv  Nations.csv
doc/TIME BASED/: Create Database.sql  Schema Concettuale.drawio  [TIME-BASED] ER-Diagram.mwb  [TIME-BASED] ER-Diagram.mwb.bak
src/: CMakeLists.txt  build.bat  mod_launcher.c  player_launcher.c
src/New-Mode/: .env  .gitignore  CMakeLists.txt  Makefile  Makefile-Old  launcher.c  risiko
src/New-Mode/controller/: ingame.c  ingame.h  login.c  moderator.c  moderator.h  player.c  player.h
src/New-Mode/model/: db.c  db.h  p_lobby.h  p_match.c  p_match.h  p_match_history.h  session.c  session.h
src/New-Mode/utils/: dotenv.c  io.c  io.h  mem.c  mem.h  view.c  view.h
src/New-Mode/view/: calibrate.c  calibrate.h  login.c  login.h  m_mainmenu.c  m_mainmenu.h  mainmenu_m.c  mainmenu_p.c  p_game_ingame.c  p_game_ingame.h  p_game_waiting.c  p_game_waiting.h  p_lobby.c  p_lobby.h  p_mainmenu.c  p_mainmenu.h  p_match_history.c  p_match_history.h  p_match_result.c  p_match_result.h
src/Old-Mode/: bootstrap.bat  build.bat  cleanup.bat
src/Old-Mode/backend/connector/: db_connector.c
src/Old-Mode/clients/: initiator.c  initiator.h
src/Old-Mode/clients/player/: p_client.h
src/Old-Mode/launchers/: mod_launcher.c  player_launcher.c
src/Test-Mode/: Makefile  common.c  launcher.c
src/backend/connector/: db_connector.h
src/clients/: initiator.c  initiator.h  initiator.h.gch
src/clients/moderator/: m_client.h
src/launchers/: mod_launcher.c
